# toa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPECIFICATION.md  build-release.sh  pgo.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: comparison.rs
libslz/: Cargo.toml
libslz/src/: README.md  header.rs  lib.rs  metadata.rs  reader.rs  reed_solomon.rs  trailer.rs  work_queue.rs  writer.rs
libslz/src/lzma/: decoder.rs  enc.rs  filter.rs  lzma_reader.rs  optimized_reader.rs  range_dec.rs
libslz/src/lzma/enc/: encoder.rs  encoder_fast.rs  encoder_normal.rs  lzma_writer.rs
libslz/src/lzma/lz/: bt4.rs  lz_decoder.rs  lz_encoder.rs
libslz/src/reader/: ecc_reader.rs  streaming_reader.rs
libslz/src/writer/: ecc_writer.rs  streaming_writer.rs
libtoa/: CHANGELOG.md  Cargo.toml  README.md
libtoa-native/: Cargo.toml  README.md
libtoa-native/include/: toa.h
libtoa-native/src/: lib.rs
libtoa/benches/: ecc.rs
libtoa/src/: circular_buffer.rs  cv_stack.rs  decoder.rs  encoder.rs  header.rs  lib.rs  lzma.rs  metadata.rs  no_std.rs  reader.rs  reed_solomon.rs  trailer.rs  work_pool.rs  work_queue.rs  writer.rs
libtoa/src/decoder/: ecc_decoder.rs  file_decoder.rs  streaming_decoder.rs
libtoa/src/encoder/: block_encoder.rs  ecc_encoder.rs  file_encoder.rs  streaming_encoder.rs
libtoa/src/lzma/: decoder.rs  enc.rs  filter.rs  lzma2s_decoder.rs  lzma2s_reader.rs  range_dec.rs
libtoa/src/lzma/enc/: encoder.rs  encoder_fast.rs  lzma2s_encoder.rs  lzma2s_writer.rs  lzma_writer.rs  range_enc.rs
libtoa/src/lzma/filter/: bcj.rs
libtoa/src/lzma/lz/: bt4.rs  hash234.rs  hc4.rs  lz_decoder.rs  lz_encoder.rs
libtoa/src/reader/: ecc_reader.rs  streaming_reader.rs
libtoa/src/writer/: block_writer.rs  ecc_writer.rs  streaming_writer.rs
scripts/: corrupt_file.py  generate_rs_test_vectors.py
src/: blake3.rs  compression.rs  decompression.rs  header.rs  lib.rs  list.rs  lzma.rs  main.rs  metadata.rs  no_std.rs  reader.rs  reed_solomon.rs  test_simd.rs  trailer.rs  util.rs  work_queue.rs  writer.rs
src/lzma/: decoder.rs  enc.rs  lzma_reader.rs  range_dec.rs
src/lzma/enc/: range_enc.rs
src/lzma/filter/: bcj.rs  delta.rs
src/lzma/lz/: hc4.rs  lz_encoder.rs
src/reader/: streaming_reader.rs
src/writer/: streaming_writer.rs
tests/: bcj.rs  cvstack.rs  file_encoder.rs
tests/data/: README.md
