[workspace]
members = ["libtoa"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", default-features = false, features = ["std", "help"] }
blake3 = { version = "1" }
hex-literal = "1"

[package]
name = "toa"
description = "TOA compression command-line tool. Modern compression with built-in error correction"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
homepage = "https://github.com/hasenbanck/toa/"
repository = "https://github.com/hasenbanck/toa/"
license = "Apache-2.0"
version = "0.2.0"
keywords = ["lzma", "toa", "compression"]
edition = "2024"
rust-version = "1.89"
exclude = ["tests/data/"]

[[bin]]
name = "toa"
path = "src/main.rs"

[dependencies]
libtoa = { version = "0.2", default-features = false, features = ["std"], path = "libtoa" }
clap = { workspace = true }
