[workspace]
members = ["libtoa", "libtoa-native"]
resolver = "2"

[workspace.dependencies]
blake3 = { version = "1" }
clap = { version = "4", default-features = false, features = ["std", "help"] }
criterion = "0.7"
hex-literal = "1"
glob = "0.3"

[package]
name = "toa"
description = "TOA compression command-line tool. Modern compression with built-in error correction"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
homepage = "https://github.com/hasenbanck/toa/"
repository = "https://github.com/hasenbanck/toa/"
license = "Apache-2.0"
version = "0.3.0"
keywords = ["lzma", "toa", "compression"]
categories = ["compression", "command-line-interface"]
edition = "2024"
rust-version = "1.89"
exclude = ["tests/data/"]

[[bin]]
name = "toa"
path = "src/main.rs"

[dependencies]
libtoa = { version = "0.3", default-features = false, features = ["std", "optimization"], path = "libtoa" }
clap = { workspace = true }
glob = { workspace = true }
