[package]
name = "libtoa"
description = "TOA compression file format library. Modern compression with built-in error correction"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
homepage = "https://github.com/hasenbanck/toa/"
repository = "https://github.com/hasenbanck/toa/"
documentation = "https://docs.rs/libtoa/latest/libtoa/"
license = "Apache-2.0"
version = "0.2.1"
keywords = ["lzma", "toa", "compression", "streaming"]
edition = "2024"
rust-version = "1.89"

[dependencies]
blake3 = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std", "optimization"]
# Used to support std. Deactivating this feature makes this crate no_std compatible.
std = []
# Activates some optimizations that can't express in safe Rust alone.
optimization = ["std"]

[package.metadata.docs.rs]
features = ["std", "optimization"]
rustdoc-args = ["--cfg", "docsrs"]
